--- a/src/frontend-playground/index.html
+++ b/src/frontend-playground/index.html
@@ -5,6 +5,13 @@
     <title>Playground</title>
 </head>
 <body>
-    <h1>just a message</h1>
+    <h1>trying to auth from Telegram</h1>
+
+    <script async src="https://telegram.org/js/telegram-widget.js?19" data-telegram-login="lesson_schedule_messenger_bot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+    <script type="text/javascript">
+        function onTelegramAuth(user) {
+            alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+        }
+    </script>
 </body>
 </html>
